Them function tinh chu vi dien tich hinh tron

--- a/thuc-hanh-1.html
+++ b/thuc-hanh-1.html
@@ -50,7 +50,10 @@
             document.getElementById("chuvi").innerHTML = "Bán kính hình tròn = "+r+"<br><br> Chu vi = "+ chuvi.toFixed(2);
             document.getElementById("dientich").innerHTML = "Diện tích = "+dientich.toFixed(2);
         }
-
+        
+        function f() {
+            
+        }
     </script>
 </body>
 </html>
