Bài tập Ứng dụng máy tính

--- a/ung-dung-may-tinh.html
+++ b/ung-dung-may-tinh.html
@@ -20,7 +20,7 @@
 
 
     <script>
-        let so1, so2, ketqua, pheptinh,pheptinh1,pheptinh2,pheptinh3
+        let so1, so2, ketqua
 
         function hamcong() {
             so1 = document.getElementById("so1").value
